--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -34,6 +34,7 @@ html {
     margin: auto;
     width: 100%;
     max-width: $large-screen-container-width;
+    padding: 0 0.5rem;
 
     @media screen and (max-width: $medium-screen-min-width) {
       padding: 0 1rem;
