--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,9 +1,10 @@
 {% assign brief = include.brief %}
+{% assign postUrl = include.postUrl %}
 
 <article class="post">
     <img class="post__image" src="{{ include.image }}">
     <div class="post__container">
-    <a class="post__link" href="#"><h2 class="post__title">{{ include.title }}</h2></a>
+    <a class="post__link" href="{{ postUrl }}"><h2 class="post__title">{{ include.title }}</h2></a>
     <p class="post__brief">{{ brief | strip_html | truncate: 300 , "..." }}</p>
     <span class="post__author">Author: </span>
     <span class="post__author post__author--name">{{ include.author }}</span>
