Start handle standard post selectors

--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -11,11 +11,12 @@
 
         {% for page in (1..paginator.total_pages) %}
             {% if page == paginator.page %}
+            {{ page paginator.page }}
                 {% include pagination_icon.html
                     btnContent = page %}
             {% elsif page == 1 %}
                 {% include pagination_icon.html
-                    pageUrl = "/" 
+                    pageUrl = "/SampleJekyllTheme" 
                     btnContent = page %}
             {% else %}
                 {% assign url = site.paginate_path | relative_url | replace: ':num', page %}
