--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -31,7 +31,7 @@
                 </div>
             </section>
             
-            <section class="section">
+            <section class="section article__content">
                 {{ content }}
             </section>
         </article>
