Add support for youtube videos Add supprort fot code highlight

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jekyll website</title>
     <link rel="stylesheet" href={{ "assets/css/main.css" | relative_url }} />
+    <link rel="stylesheet" href={{ "assets/css/monokai.css" | relative_url }} />
+
 </head>
 
 <body>
@@ -37,5 +39,6 @@
         </article>
         {% include footer.html %}
     </main>
+    <script src="{{ "assets/js/main.js" | relative_url }}"></script>
 </body>
 </html>
