--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,11 +1,18 @@
 {% assign brief = include.brief %}
 {% assign postUrl = include.postUrl %}
+{% assign categories = include.categories %}
 
 <article class="post">
     <img class="post__image" src="{{ include.image }}">
     <div class="post__container">
     <a class="post__link" href="{{ postUrl }}"><h2 class="post__title">{{ include.title }}</h2></a>
-    <p class="post__brief">{{ brief | strip_html | truncate: 300 , "..." }}</p>
+    <div class="categories">
+        {% for category in categories %}
+            {% include category.html
+                categoryName = category
+            %}
+        {% endfor %}
+    </div>
     <span class="post__author">Author: </span>
     <span class="post__author post__author--name">{{ include.author }}</span>
     </div>
