--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,8 @@
 <nav class="navigation">
     <ul class="navigation__items container">
         <li class="navigation__item navigation__item--logo"><a class="navigation__text" href="#"><span><span class="logo logo__dave">Dave </span><span class="logo logo__dev">Dev</span></a></li>
-        <li class="navigation__item navigation__item--link"><a class="navigation__text navigation__text--link" href="index.html">Home</a></li>
-        <li class="navigation__item navigation__item--link"><a class="navigation__text navigation__text--link" href="news.html">Categories</a></li>
+        <li class="navigation__item navigation__item--link"><a class="navigation__text navigation__text--link" href="{{ site.url }}">Home</a></li>
+        <li class="navigation__item navigation__item--link"><a class="navigation__text navigation__text--link" href="{{ site.url}}/categories">Categories</a></li>
         <li class="navigation__item navigation__item--toggle-js"><span class="navigation__toggle navigation__toggle--bars"></span></li>
     </ul>
 </nav>
