--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,19 +1,28 @@
-{% assign brief = include.brief %}
 {% assign postUrl = include.postUrl %}
 {% assign categories = include.categories %}
+{% assign postDate = include.postDate %}
 
 <article class="post">
     <img class="post__image" src="{{ include.image }}">
-    <div class="post__container">
-    <a class="post__link" href="{{ postUrl }}"><h2 class="post__title">{{ include.title }}</h2></a>
-    <div class="categories">
-        {% for category in categories %}
-            {% include category.html
-                categoryName = category
-            %}
-        {% endfor %}
-    </div>
-    <span class="post__author">Author: </span>
-    <span class="post__author post__author--name">{{ include.author }}</span>
+    <div class="post__container post__container--vertical">
+        <a class="post__link" href="{{ postUrl }}"><h2 class="post__title">{{ include.title }}</h2></a>
+        <div class="categories">
+            {% for category in categories %}
+                {% include category.html
+                    categoryName = category
+                %}
+            {% endfor %}
+        </div>
+        
+        <div class="post__container post__container--horizontal">
+            <div class="post__container post__container--horizontal post__container--margin-right">
+                <img class="post__author--image" />
+                <span class="post__author">{{ include.author }}</span>
+            </div>
+            <div class="post__container post__container--horizontal post__container--margin-right">
+                <img class="post__date--image" />
+                <span class="post__date">{{ include.postDate | date_to_string }}</span>
+            </div>
+        </div>
     </div>
 </article>
