--- a/_sass/modules/categories.scss
+++ b/_sass/modules/categories.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 0.5rem 0;
 }
 
 .category {
@@ -14,6 +15,8 @@
     border-radius: 8px;
 
     &__name {
+        display: block;
+        line-height: .5rem;
         font-size: .5rem;
         font-weight: 400;
         margin: 4px;
