--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -24,7 +24,7 @@
                     
                     <div class="categories">
                         {% for category in page.categories %}
-                            {% include category.html
+                            {% include category-button.html
                                 categoryName = category
                             %}
                         {% endfor %}
