--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,6 @@
 @import "modules/post";
 @import "modules/pagination";
 @import "modules/article";
-@import "modules/categories";
+@import "modules/category-button";
 
 @import "main";
