--- a/_includes/post.html
+++ b/_includes/post.html
@@ -6,6 +6,7 @@
     <img class="post__image" src="{{ include.image }}">
     <div class="post__container post__container--vertical">
         <a class="post__link" href="{{ postUrl }}"><h2 class="post__title">{{ include.title }}</h2></a>
+        
         <div class="categories">
             {% for category in categories %}
                 {% include category-button.html
@@ -13,16 +14,9 @@
                 %}
             {% endfor %}
         </div>
-        
-        <div class="post__container post__container--horizontal">
-            <div class="post__container post__container--horizontal post__container--margin-right">
-                <img class="post__author--image" />
-                <span class="post__author">{{ include.author }}</span>
-            </div>
-            <div class="post__container post__container--horizontal post__container--margin-right">
-                <img class="post__date--image" />
-                <span class="post__date">{{ include.postDate | date_to_string }}</span>
-            </div>
-        </div>
+
+        {% include post_additional_info.html
+            postAuthor = include.author
+            postDate = include.postDate %}
     </div>
 </article>
