--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -20,7 +20,9 @@
 
             <article class="container article">
                 <section class="article__info">
-                    <h1 class="article article__title">{{ page.title }}</h1>
+                    {% include post_additional_info.html
+                        postAuthor = page.author
+                        postDate = page.date %}
                     
                     <div class="categories">
                         {% for category in page.categories %}
@@ -30,16 +32,8 @@
                         {% endfor %}
                     </div>
 
-                    <div class="article__container article__container--horizontal">
-                        <div class="article__container article__container--margin-right">
-                            <img class="article__author--image" />
-                            <span class="article__author">{{ page.author }}</span>
-                        </div>
-                        <div class="article__container article__container--margin-right">
-                            <img class="article__date--image" />
-                            <span class="article__date">{{ page.date | date_to_string }}</span>
-                        </div>
-                    </div>
+                    
+                    <h1 class="article article__title">{{ page.title }}</h1>
                 </section>
                 
                 <section class="section article__content">
