Improve responsive Delete old breakpoints for media queries Working on categories site

--- a/_includes/post_additional_info.html
+++ b/_includes/post_additional_info.html
@@ -2,11 +2,11 @@
 {% assign postDate = include.postDate %}
 
 <div class="post__container post__container--horizontal">
-    <div class="post__container post__container--margin-right">
+    <div class="post__container post__container--vertical-center post__container--margin-right">
         <img class="post__author--image" />
         <span class="post__author">{{ postAuthor }}</span>
     </div>
-    <div class="post__container post__container--margin-right">
+    <div class="post__container post__container--vertical-center post__container--margin-right">
         <img class="post__date--image" />
         <span class="post__date">{{ postDate | date_to_string }}</span>
     </div>
