--- a/_sass/devices.scss
+++ b/_sass/devices.scss
@@ -1,9 +1,6 @@
-$desktop: 1020px;
-$tablet: 768px;
-$mobile: 480px;
-
-$large-screen-min-width: 992px;
+$large-screen-min-width: 991px;
 $medium-screen-min-width: 767px;
+$small-screen-max-width: 567px;
 
 $large-screen-container-width: 960px;
 $medium-screen-container-width: 720px;
