--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,5 +12,6 @@
 @import "modules/pagination";
 @import "modules/article";
 @import "modules/category-button";
+@import "modules/categories";
 
 @import "main";
