--- a/_includes/youTubeVideo.html
+++ b/_includes/youTubeVideo.html
@@ -1,7 +1,7 @@
 <div>
     <iframe class="article__content--video" src="https://www.youtube.com/embed/{{ include.videoId }}"
-        width="560" 
-        height="315" 
+        width="100%" 
+        height="auto" 
         title="YouTube video player"
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
