--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,14 +1,14 @@
 html {
     box-sizing: border-box;
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter';
     scroll-behavior: smooth;
     height: 100%;
   
-    @media screen and (max-width: $tablet) {
+    @media screen and (max-width: $medium-screen-min-width) {
       font-size: 16px;
     }
-    @media screen and (max-width: $mobile) {
+    @media screen and (max-width: $small-screen-max-width) {
       font-size: 14px;
     }
   }
@@ -36,17 +36,22 @@ html {
     max-width: $large-screen-container-width;
     padding: 0 0.5rem;
 
-    @media screen and (max-width: $medium-screen-min-width) {
+    @media screen and (max-width: $large-screen-min-width) {
       padding: 0 1rem;
+      max-width: $medium-screen-container-width;
     }
   }
 
   .content {
     min-height: 100%;
+    width: 100%;
     grid-row-start: 2;
     grid-row-end: 3;
-    display: flex;
-    flex-direction: column;
+
+    &__flex-column {
+      display: flex;
+      flex-direction: column;
+    }
   }
   
   .link {
