--- a/_sass/modules/categories.scss
+++ b/_sass/modules/categories.scss
@@ -1,14 +1,14 @@
 .categories {
     &__grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 150px);
-        gap: 2rem;
-        justify-content: center;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: flex-start;
     }
 }
 
 .card {
     width: 150px;
+    margin: 0.5rem;
     
     &__top {
         height: 200px; 
