--- a/_sass/modules/categories.scss
+++ b/_sass/modules/categories.scss
@@ -1,14 +1,26 @@
 .categories {
     &__grid {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: flex-start;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        justify-content: center;
+
+        @media screen and (max-width: $large-screen-min-width) {
+            grid-template-columns: repeat(4, 1fr);
+        }
+
+        @media screen and (max-width: $medium-screen-min-width) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @media screen and (max-width: $small-screen-max-width) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 }
 
 .card {
     width: 150px;
-    margin: 0.5rem;
+    margin: auto;
     
     &__top {
         height: 200px; 
